sources xml modification and concatinating text

--- a/app/src/main/res/layout/sources_row.xml
+++ b/app/src/main/res/layout/sources_row.xml
@@ -45,7 +45,8 @@
     android:id="@+id/tv_category"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:gravity="center"
+    android:gravity="start"
+    android:layout_marginStart="10dp"
     android:layout_below="@+id/tv_name"
     android:textColor="@color/colorPrimary"
     android:textSize="20sp" />
