--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -23,7 +23,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:tabTextColor="#fff"
-                app:tabSelectedTextColor="#000"
+                app:tabSelectedTextColor="#F44336"
                 app:tabGravity="fill"
                 app:tabMode="fixed" />
     </com.google.android.material.appbar.AppBarLayout>
