--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">#5A0821</color>
+    <color name="colorPrimaryDark">#3A0817</color>
     <color name="colorAccent">#D81B60</color>
     <color name="colorIconTint">#D3AAAAAA</color>
     <color name="colorDivider">#e7e6e6</color>
