--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -5,5 +5,6 @@
           android:title="@string/action_settings"
           android:orderInCategory="100"
           android:icon="@drawable/ic_search_black_24dp"
-          app:showAsAction="ifRoom"/>
+          app:showAsAction="always"
+          app:actionViewClass="androidx.appcompat.widget.SearchView"/>
 </menu>
